# EchoPoint

./: .gitattributes  .gitignore  Dockerfile  LICENSE
RZC technical research/: technical research.aux  technical research.nav  technical research.out  technical research.tex  technical research.toc
documents/: technical research.tex  technical research.vrb
ros_find_node/: CMakeLists.txt  CMakeLists.txt.save  package.xml
ros_find_node/launch/: pointing_centering.launch  red_ball_centering.launch
ros_find_node/scripts/: pointing_centering_node.py  red_ball_centering_node.py
ros_find_node/src/: red_ball_centering_node.py  test_publisher.py
ros_find_node/srv/: PointingTask.srv  StartFind.srv
ros_langchain_node/: CMakeLists.txt  package.xml
ros_langchain_node/launch/: langchain.launch
ros_langchain_node/scripts/: test_node.py
ros_langchain_node/scripts_tools/: exec_in_container.sh  run_container.sh  setup.sh  test_communication.sh
ros_langchain_node/src/: config.py  langchain_node.py  model_manager.py
ros_langchain_node/src/agents/: agent.py  prompts.py  test.py
ros_langchain_node/srv/: DescribeImage.srv
ros_locate_node/: CMakeLists.txt  package.xml
ros_locate_node/launch/: module1.launch
ros_locate_node/scripts/: module1_master.py
