<?xml version="1.0"?>
<package format="2">
  <name>ros_find_node</name>
  <version>0.0.1</version>
  <description>Center the robot head camera on a red ball marker and capture a snapshot.</description>

  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>bodyhub</build_depend>
  <build_depend>ros_vision_node</build_depend>
  <build_depend>ros_AIUI_node</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>bodyhub</exec_depend>
  <exec_depend>ros_vision_node</exec_depend>
  <exec_depend>ros_AIUI_node</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
