<?xml version="1.0"?>
<package format="2">
  <name>ros_langchain_node</name>
  <version>0.1.0</version>
  <description>ROS node for LangChain integration</description>
  
  <maintainer email="lemon@example.com">lemon</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>

